projects/vb6parse/snapshots/parsers/files/environment/class/environment_icontrolindex_class_load.snap
---
source: projects/vb6parse/tests/files/environment/class.rs
assertion_line: 1509
expression: class
---
header:
  version:
    major: 1
    minor: 0
  properties:
    multi_use: MultiUse
    persistable: NotPersistable
    data_binding_behavior: None
    data_source_behavior: None
    mts_transaction_mode: NotAnMTSObject
  attributes:
    name: IControlIndex
    global_name_space: Local
    creatable: "True"
    predeclared_id: "False"
    exposed: "True"
    description: ~
    ext_key: {}
cst:
  root:
    kind: Root
    children:
      - kind: PropertyStatement
        children:
          - kind: PublicKeyword
            text: Public
          - kind: Whitespace
            text: " "
          - kind: PropertyKeyword
            text: Property
          - kind: Whitespace
            text: " "
          - kind: GetKeyword
            text: Get
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: Index
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: RightParenthesis
                text: )
          - kind: Whitespace
            text: " "
          - kind: AsKeyword
            text: As
          - kind: Whitespace
            text: " "
          - kind: LongKeyword
            text: Long
          - kind: Newline
            text: "\r\n"
          - kind: StatementList
            children: []
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: PropertyKeyword
            text: Property
          - kind: Newline
            text: "\r\n"
      - kind: Newline
        text: "\r\n"
      - kind: PropertyStatement
        children:
          - kind: PublicKeyword
            text: Public
          - kind: Whitespace
            text: " "
          - kind: PropertyKeyword
            text: Property
          - kind: Whitespace
            text: " "
          - kind: LetKeyword
            text: Let
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: Index
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: ByValKeyword
                text: ByVal
              - kind: Whitespace
                text: " "
              - kind: Identifier
                text: RHS
              - kind: Whitespace
                text: " "
              - kind: AsKeyword
                text: As
              - kind: Whitespace
                text: " "
              - kind: LongKeyword
                text: Long
              - kind: RightParenthesis
                text: )
          - kind: Newline
            text: "\r\n"
          - kind: StatementList
            children: []
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: PropertyKeyword
            text: Property
          - kind: Newline
            text: "\r\n"
      - kind: SubStatement
        children:
          - kind: PublicKeyword
            text: Public
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: UnloadMe
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: RightParenthesis
                text: )
          - kind: Newline
            text: "\r\n"
          - kind: StatementList
            children: []
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Newline
            text: "\r\n"
      - kind: Newline
        text: "\r\n"
      - kind: Newline
        text: "\r\n"
