projects/vb6parse/snapshots/parsers/files/environment/class/environment_mthreadref_class_load.snap
---
source: projects/vb6parse/tests/files/environment/class.rs
assertion_line: 2079
expression: class
---
header:
  version:
    major: 1
    minor: 0
  properties:
    multi_use: MultiUse
    persistable: NotPersistable
    data_binding_behavior: None
    data_source_behavior: None
    mts_transaction_mode: NotAnMTSObject
  attributes:
    name: mThreadref
    global_name_space: Local
    creatable: "True"
    predeclared_id: "False"
    exposed: "False"
    description: ~
    ext_key: {}
cst:
  root:
    kind: Root
    children:
      - kind: OptionStatement
        children:
          - kind: OptionKeyword
            text: Option
          - kind: Whitespace
            text: " "
          - kind: ExplicitKeyword
            text: Explicit
          - kind: Newline
            text: "\r\n"
      - kind: DimStatement
        children:
          - kind: PrivateKeyword
            text: Private
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: mReference
          - kind: Whitespace
            text: " "
          - kind: AsKeyword
            text: As
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: TaskInterface
          - kind: Newline
            text: "\r\n"
      - kind: DimStatement
        children:
          - kind: PrivateKeyword
            text: Private
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: mThreadVar
          - kind: Whitespace
            text: " "
          - kind: AsKeyword
            text: As
          - kind: Whitespace
            text: " "
          - kind: StringKeyword
            text: String
          - kind: Newline
            text: "\r\n"
      - kind: DimStatement
        children:
          - kind: PrivateKeyword
            text: Private
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: mThreadID
          - kind: Whitespace
            text: " "
          - kind: AsKeyword
            text: As
          - kind: Whitespace
            text: " "
          - kind: LongKeyword
            text: Long
          - kind: Newline
            text: "\r\n"
      - kind: Newline
        text: "\r\n"
      - kind: Whitespace
        text: " "
      - kind: PropertyStatement
        children:
          - kind: PropertyKeyword
            text: Property
          - kind: Whitespace
            text: " "
          - kind: LetKeyword
            text: Let
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: VarName
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: ByRefKeyword
                text: ByRef
              - kind: Whitespace
                text: " "
              - kind: Identifier
                text: RHS
              - kind: Whitespace
                text: " "
              - kind: AsKeyword
                text: As
              - kind: Whitespace
                text: " "
              - kind: StringKeyword
                text: String
              - kind: RightParenthesis
                text: )
          - kind: Newline
            text: "\r\n"
          - kind: StatementList
            children:
              - kind: AssignmentStatement
                children:
                  - kind: IdentifierExpression
                    children:
                      - kind: Identifier
                        text: mThreadVar
                  - kind: Whitespace
                    text: " "
                  - kind: EqualityOperator
                    text: "="
                  - kind: Whitespace
                    text: " "
                  - kind: IdentifierExpression
                    children:
                      - kind: Identifier
                        text: RHS
                  - kind: Newline
                    text: "\r\n"
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: PropertyKeyword
            text: Property
          - kind: Newline
            text: "\r\n"
      - kind: Newline
        text: "\r\n"
      - kind: Whitespace
        text: " "
      - kind: PropertyStatement
        children:
          - kind: PropertyKeyword
            text: Property
          - kind: Whitespace
            text: " "
          - kind: GetKeyword
            text: Get
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: VarName
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: RightParenthesis
                text: )
          - kind: Whitespace
            text: " "
          - kind: AsKeyword
            text: As
          - kind: Whitespace
            text: " "
          - kind: StringKeyword
            text: String
          - kind: Newline
            text: "\r\n"
          - kind: StatementList
            children:
              - kind: AssignmentStatement
                children:
                  - kind: IdentifierExpression
                    children:
                      - kind: Identifier
                        text: VarName
                  - kind: Whitespace
                    text: " "
                  - kind: EqualityOperator
                    text: "="
                  - kind: Whitespace
                    text: " "
                  - kind: IdentifierExpression
                    children:
                      - kind: Identifier
                        text: mThreadVar
                  - kind: Newline
                    text: "\r\n"
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: PropertyKeyword
            text: Property
          - kind: Newline
            text: "\r\n"
      - kind: Whitespace
        text: " "
      - kind: PropertyStatement
        children:
          - kind: PropertyKeyword
            text: Property
          - kind: Whitespace
            text: " "
          - kind: SetKeyword
            text: Set
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: thread
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: ByRefKeyword
                text: ByRef
              - kind: Whitespace
                text: " "
              - kind: Identifier
                text: RHS
              - kind: Whitespace
                text: " "
              - kind: AsKeyword
                text: As
              - kind: Whitespace
                text: " "
              - kind: Identifier
                text: TaskInterface
              - kind: RightParenthesis
                text: )
          - kind: Newline
            text: "\r\n"
          - kind: StatementList
            children:
              - kind: SetStatement
                children:
                  - kind: SetKeyword
                    text: Set
                  - kind: Whitespace
                    text: " "
                  - kind: IdentifierExpression
                    children:
                      - kind: Identifier
                        text: mReference
                  - kind: Whitespace
                    text: " "
                  - kind: EqualityOperator
                    text: "="
                  - kind: Whitespace
                    text: " "
                  - kind: IdentifierExpression
                    children:
                      - kind: Identifier
                        text: RHS
                  - kind: Newline
                    text: "\r\n"
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: PropertyKeyword
            text: Property
          - kind: Newline
            text: "\r\n"
      - kind: Newline
        text: "\r\n"
      - kind: Whitespace
        text: " "
      - kind: PropertyStatement
        children:
          - kind: PropertyKeyword
            text: Property
          - kind: Whitespace
            text: " "
          - kind: GetKeyword
            text: Get
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: thread
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: RightParenthesis
                text: )
          - kind: Whitespace
            text: " "
          - kind: AsKeyword
            text: As
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: TaskInterface
          - kind: Newline
            text: "\r\n"
          - kind: StatementList
            children:
              - kind: SetStatement
                children:
                  - kind: SetKeyword
                    text: Set
                  - kind: Whitespace
                    text: " "
                  - kind: IdentifierExpression
                    children:
                      - kind: Identifier
                        text: thread
                  - kind: Whitespace
                    text: " "
                  - kind: EqualityOperator
                    text: "="
                  - kind: Whitespace
                    text: " "
                  - kind: IdentifierExpression
                    children:
                      - kind: Identifier
                        text: mReference
                  - kind: Newline
                    text: "\r\n"
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: PropertyKeyword
            text: Property
          - kind: Newline
            text: "\r\n"
      - kind: Whitespace
        text: " "
      - kind: PropertyStatement
        children:
          - kind: PropertyKeyword
            text: Property
          - kind: Whitespace
            text: " "
          - kind: LetKeyword
            text: Let
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: Id
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: ByValKeyword
                text: ByVal
              - kind: Whitespace
                text: " "
              - kind: Identifier
                text: RHS
              - kind: Whitespace
                text: " "
              - kind: AsKeyword
                text: As
              - kind: Whitespace
                text: " "
              - kind: LongKeyword
                text: Long
              - kind: RightParenthesis
                text: )
          - kind: Newline
            text: "\r\n"
          - kind: StatementList
            children:
              - kind: AssignmentStatement
                children:
                  - kind: IdentifierExpression
                    children:
                      - kind: Identifier
                        text: mThreadID
                  - kind: Whitespace
                    text: " "
                  - kind: EqualityOperator
                    text: "="
                  - kind: Whitespace
                    text: " "
                  - kind: IdentifierExpression
                    children:
                      - kind: Identifier
                        text: RHS
                  - kind: Newline
                    text: "\r\n"
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: PropertyKeyword
            text: Property
          - kind: Newline
            text: "\r\n"
      - kind: Newline
        text: "\r\n"
      - kind: PropertyStatement
        children:
          - kind: PropertyKeyword
            text: Property
          - kind: Whitespace
            text: " "
          - kind: GetKeyword
            text: Get
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: Id
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: RightParenthesis
                text: )
          - kind: Whitespace
            text: " "
          - kind: AsKeyword
            text: As
          - kind: Whitespace
            text: " "
          - kind: LongKeyword
            text: Long
          - kind: Newline
            text: "\r\n"
          - kind: StatementList
            children:
              - kind: AssignmentStatement
                children:
                  - kind: IdentifierExpression
                    children:
                      - kind: Identifier
                        text: Id
                  - kind: Whitespace
                    text: " "
                  - kind: EqualityOperator
                    text: "="
                  - kind: Whitespace
                    text: " "
                  - kind: IdentifierExpression
                    children:
                      - kind: Identifier
                        text: mThreadID
                  - kind: Newline
                    text: "\r\n"
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: PropertyKeyword
            text: Property
          - kind: Newline
            text: "\r\n"
